   - djm@cvs.openbsd.org 2013/12/19 01:04:36      [channels.c]      bz#2147: fix multiple remote forwardings with dynamically assigned      listen ports. In the s->c message to open the channel we were sending      zero (the magic number to request a dynamic port) instead of the actual      listen port. The client therefore had no way of discriminating between      them.

Diagnosis and fix by ronf AT timeheart.net